# arma3mysql

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  hello_test.cc  library.cpp  library.h
.github/workflows/: c-cpp.yml
arma3mysql/: CMakeLists.txt  library.cpp
lib/boost-1.78-macos/lib/: libboost_atomic-mt.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  libboost_nowide-mt.dylib  libboost_nowide.dylib  (+29 more)
lib/boost-1.78-macos/lib/cmake/boost_atomic-1.78.0/: boost_atomic-config.cmake  libboost_atomic-variant-mt-shared.cmake  libboost_atomic-variant-mt-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_chrono-1.78.0/: boost_chrono-config.cmake  libboost_chrono-variant-mt-shared.cmake  libboost_chrono-variant-mt-static.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_container-1.78.0/: boost_container-config.cmake  libboost_container-variant-mt-shared.cmake  libboost_container-variant-mt-static.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_context-1.78.0/: boost_context-config.cmake  libboost_context-variant-mt-shared.cmake  libboost_context-variant-mt-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_contract-1.78.0/: boost_contract-config.cmake  libboost_contract-variant-mt-shared.cmake  libboost_contract-variant-mt-static.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_coroutine-1.78.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mt-shared.cmake  libboost_coroutine-variant-mt-static.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_date_time-1.78.0/: boost_date_time-config.cmake  libboost_date_time-variant-mt-shared.cmake  libboost_date_time-variant-mt-static.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_exception-1.78.0/: boost_exception-config.cmake
lib/boost-1.78-macos/lib/cmake/boost_fiber-1.78.0/: boost_fiber-config.cmake  libboost_fiber-variant-mt-shared.cmake  libboost_fiber-variant-mt-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_filesystem-1.78.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-mt-shared.cmake  libboost_filesystem-variant-mt-static.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_graph-1.78.0/: boost_graph-config.cmake  libboost_graph-variant-mt-shared.cmake  libboost_graph-variant-mt-static.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_graph_parallel-1.78.0/: boost_graph_parallel-config.cmake
lib/boost-1.78-macos/lib/cmake/boost_headers-1.78.0/: boost_headers-config.cmake
lib/boost-1.78-macos/lib/cmake/boost_iostreams-1.78.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-mt-shared.cmake  libboost_iostreams-variant-mt-static.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_json-1.78.0/: boost_json-config.cmake  libboost_json-variant-mt-shared.cmake  libboost_json-variant-mt-static.cmake  libboost_json-variant-shared.cmake  libboost_json-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_locale-1.78.0/: boost_locale-config.cmake  libboost_locale-variant-mt-shared.cmake  libboost_locale-variant-mt-static.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_log-1.78.0/: boost_log-config.cmake  libboost_log-variant-mt-shared.cmake  libboost_log-variant-mt-static.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
lib/boost-1.78-macos/lib/cmake/boost_log_setup-1.78.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-mt-shared.cmake  libboost_log_setup-variant-mt-static.cmake  (+2 more)
lib/mysql-connector-c++-8.0.28-macos11-x86-64bit/: INFO_BIN
lib/mysql-connector-c++-8.0.28-macos11-x86-64bit/lib64/: libmysqlcppconn.9.dylib  libmysqlcppconn8.2.dylib  libssl.1.1.dylib
lib/mysql-connector-c++-8.0.28-macos11-x86-64bit/lib64/private/: libfido2.1.5.0.dylib
src/: CMakeLists.txt
src/arma3mysql/: CMakeLists.txt  library.cpp  main.cpp
src/arma3mysql/configuration/: ConfigurationAdapter.cpp  ConfigurationAdapter.h
src/arma3mysql/extension/: ArmA3ExtensionResult.cpp  ArmA3ExtensionResult.h  Extension.cpp  Extension.h
src/arma3mysql/mysql/: MySQLConnection.cpp  MySQLConnection.h  MySQLConnectionParam.cpp  MySQLConnectionParam.h  ResultSetAdapter.cpp  ResultSetAdapter.h
src/arma3mysqltest/: CMakeLists.txt  IntegrationTests.cpp  hello_test.cc  hello_test.cpp  main.cpp
src/arma3mysqltest/Configuration/: ConfigurationAdapter.cpp
src/arma3mysqltest/Extension/: Arma3Result.cpp  TestExtension.cpp
src/arma3mysqltest/mysql/: MySQLConnectionTest.cc  MySQLConnectionTest.cpp
src/test-behaviour/: CMakeLists.txt  hello_test.cc
test-behaviour/: CMakeLists.txt  hello_test.cc
(+113 files in other folders)
